# cascading-disaster-prediction

./: .gitignore  GDRIVE_SETUP.md  Model_Training.md  README.md  environment.yml  features.md  pyproject.toml
docs/: ENV_SETUP.md  Project Idea.md  cascade_definition.md  cascade_eda_notebook.md  events_labeled_full.md  feature_eng.md  model_training.md
docs/MLiP/: Assignment1.md  data_reflection.md
docs/assignments/: Assignment0.md
feature_eng/: prepare_data.py
notebooks/: 01_cascade_eda.ipynb  02_xgboost_multilabel_training.ipynb  03_sklearn_multilabel_baselines.ipynb  04_neural_networks.ipynb  05_equity_analysis.ipynb
results/: cascade_dashboard.html
results/cascade_eda/: damage_by_cascade_type.csv  hub_events_analysis.csv  state_cascade_counts.csv  top_cascade_pairs.csv
src/: __init__.py  aggregate_features.py  cascade_definition.py  cascade_identification.py  data_loader.py  features.py  labeling.py  prepare_data.py
