[project]
name = "cascading-disaster-prediction"
version = "0.0.0"
description = "Cascade prediction EDA + utilities for cascading disaster project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.25.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "jupyter>=2.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
